# FDTD_1D_Solver

./: .gitignore  CMakeLists.txt  plot_fdtd.py
include/: Boundary.h  BraggGrating.h  Grid1D.h  Simulation.h  Source.h
src/: main.cpp
